[package]
name = "syndica-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.211", features = ["derive"] }
tokio = { version = "1.41.0", features = ["rt", "macros", "rt-multi-thread"] }